Fixed booklist p CSS from appling too widely

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,7 +156,7 @@ code, code * {
 	justify-content: space-between;
 }
 
-#bookList p {
+#bookList > p {
 	flex: 0 0 100%;
 	margin: 0 0 25px;
 }
